--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <p>こんにちは、こんわかめです</p>
     <p>ここではこんわかめという底辺Youtuberのお部屋です</p>
     <p>要らなくなったプログラムや没になった動画、台本などを上げて行くつもりです</p>
-    <a hrefhttps://conwakame.github.io/diary.io/" target="pack1">日記</a>
-</section>    
+    <a href="https://conwakame.github.io/diary.io/"target  ="pack1">日記</a>
+</ section>    
 <footer>チャンネルです</footer>
 <a href="https://www.youtube.com/channel/UCd2QPPs3WMHCZ0L-M38OE6A" target="pack1">https://www.youtube.com/channel/UCd2QPPs3WMHCZ0L-M38OE6A</a>
 </body>
