--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>こんわかめの倉庫</title>
+    <title>こんわかめの部屋</title>
     <style>
         img {
             border-radius: 10%;
@@ -25,9 +25,11 @@
     <p>要らなくなったプログラムや没になった動画、台本などを上げて行くつもりです</p>
 </section>    
 <footer>チャンネルです</footer>
-<a href="https://www.youtube.com/channel/UCd2QPPs3WMHCZ0L-M38OE6A" target="pack1">https://www.youtube.com/channel/UCd2QPPs3WMHCZ0L-M38OE6A</a>
+<a href="https://www.youtube.com/channel/UCd2QPPs3WMHCZ0L-M38OE6A" target="pack1">チャンネルやで</a>
 <footer>日記です↓</footer>
-<a href="https://conwakame.github.io/diary.io/"target  ="pack1">https://conwakame.github.io/diary.io/</a>
+<a href="https://conwakame.github.io/diary.io/" target  ="pack1">日記ですぞ</a>
+<footer>うp主が色々投げた無法地帯です</footer>
+<a href="https://conwakame.github.io/warehouse.io/" target="pack1">無法地帯</a>
 </body>
 
 </html>
