--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <p>要らなくなったプログラムや没になった動画、台本などを上げて行くつもりです</p>
 </section>    
 <footer>チャンネルです</footer>
-<a href="https://www.youtube.com/channel/UCd2QPPs3WMHCZ0L-M38OE6A" target="pack1">チャンネルやで</a>
+<a href="https://www.youtube.com/channel/UCd2QPPs3WMHCZ0L-M38OE6A" target="pack1">チャンネル</a>
 <footer>日記です↓</footer>
-<a href="https://conwakame.github.io/diary.io/" target  ="pack1">日記ですぞ</a>
+<a href="https://conwakame.github.io/diary.io/" target  ="pack1">日記</a>
 <footer>うp主が色々投げた無法地帯です</footer>
-<a href="https://conwakame.github.io/warehouse.io/" target="pack1">無法地帯</a>
+<a href="https://conwakame.github.io/warehouse.io/" target="pack1">倉庫</a>
 </body>
 
 </html>
