--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <section>
-    <h1>こんわかめの倉庫</h1>
+    <h1>こんわかめの部屋</h1>
     <img src="チャンネルアイコン.bmp" alt="こんわかめの部屋のチャンネルアイコンです">
     <p>こんにちは、こんわかめです</p>
     <p>ここではこんわかめという底辺Youtuberのお部屋です</p>
