--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="ja">
 <head>
+    <article>
+    <div class="content">
+    <p>メインコンテンツ</p>
+    </div>
+    <div class="side">
+    <p>サイドバー</p>
+    </div> 
+    </article>
     <meta charset="utf-8">
     <title>こんわかめの部屋</title>
     <style>
@@ -17,6 +25,29 @@
     </style>
 </head>
 <body>
+body {
+   font-family:'Noto Sans JP',sans-serif;
+   background-color:#f6f5f4;
+}
+
+.side {
+  background-color:#ff838b;
+  width:100px;
+  height:300px;
+  text-align:center;
+} 
+
+.content {
+  background-color:#b3d874;
+  width:250px;
+  height:300px;
+  text-align:center;
+  margin-left:10px;/*サイドバーとメインコンテンツの間に隙間                    をあけた*/
+}
+
+article {
+  display:flex;/*サイドバーとメインコンテンツを横並びにする                指定をした*/
+}
 <section>
     <h1>こんわかめの部屋</h1>
     <img src="チャンネルアイコン.bmp" alt="こんわかめの部屋のチャンネルアイコンです">
