--- a/index.html
+++ b/index.html
@@ -25,19 +25,14 @@
     </style>
 </head>
 <body>
-<section>
-    <h1>こんわかめの部屋</h1>
-    <img src="チャンネルアイコン.bmp" alt="こんわかめの部屋のチャンネルアイコンです">
-    <p>こんにちは、こんわかめです</p>
-    <p>ここではこんわかめという底辺Youtuberのお部屋です</p>
-    <p>要らなくなったプログラムや没になった動画、台本などを上げて行くつもりです</p>
-</section>    
-<footer>チャンネルです</footer>
-<a href="https://www.youtube.com/c/%E3%81%93%E3%82%93%E3%82%8F%E3%81%8B%E3%82%81">チャンネル</a>
-<footer>日記です↓</footer>
-<a href="https://conwakame.github.io/diary.io/">日記</a>
-<footer>うp主が色々投げた無法地帯です</footer>
-<a href="https://conwakame.github.io/warehouse.io/">倉庫</a>
+<div class="container">
+  <div class="main-contents">
+  メインコンテンツ
+  </div>
+  <div class="side-menu">
+  サイドメニュー
+  </div>
+</div>
 </body>
 
 </html>
