--- a/index.html
+++ b/index.html
@@ -17,13 +17,24 @@
     </style>
 </head>
 <body>
-<div class="container">
-  <div class="main-contents">
-  メインコンテンツ
-  </div>
-  <div class="side-menu">
-  サイドメニュー
-  </div>
+.container {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-contents {
+  width: 70%;
+  padding: 10px;
+  background-color: #ccc;
+}
+
+.side-menu {
+  width: 20%;
+  padding: 10px;
+  background-color: #faa;
+}
 </div>
 </body>
 
