--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     </style>
 </head>
 <body>
-<link rel="stylesheet" href="sideber.css">
+<section>
+    <h1>こんわかめの部屋</h1>
+    <img src="チャンネルアイコン.bmp" alt="こんわかめの部屋のチャンネルアイコンです">
+    <p>こんにちは、こんわかめです</p>
+    <p>ここではこんわかめという底辺Youtuberのお部屋です</p>
+    <p style="text-align:center">要らなくなったプログラムや没になった動画、台本などを上げて行くつもりです</p>
+</section>    
 </body>
 
 </html>
