--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </head>
 <body>
 <section>
-    <h1>こんわかめの部屋</h1>
+    <h2 style="text-align:center">こんわかめ</h2>
     <img src="チャンネルアイコン.bmp" alt="こんわかめの部屋のチャンネルアイコンです">
-    <p>こんにちは、こんわかめです</p>
-    <p>ここではこんわかめという底辺Youtuberのお部屋です</p>
+    <p style="text-align:center">こんにちは、こんわかめです</p>
+    <p style="text-align:center">ここではこんわかめという底辺Youtuberのお部屋です</p>
     <p style="text-align:center">要らなくなったプログラムや没になった動画、台本などを上げて行くつもりです</p>
 </section>    
 </body>
