--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2 style="text-align:center">こんわかめ</h2>
     <center><img src="チャンネルアイコン.bmp" alt="こんわかめの部屋のチャンネルアイコンです"></center>
     <p style="text-align:center">こんにちは、こんわかめです</p>
-    <p style="text-align:center">ここではこんわかめという底辺Youtuberのお部屋です</p>
+    <p style="text-align:center">ここはこんわかめという底辺Youtuberのお部屋です</p>
     <p style="text-align:center">要らなくなったプログラムや没になった動画、台本などを上げて行くつもりです</p>
 </section>    
 </body>
