--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <section>
-    <h2 style="text-align:center">こんわかめ</h2>
-    <center><img src="チャンネルアイコン.gif" alt="こんわかめの部屋のチャンネルアイコンです"></center>
-    <p style="text-align:center">こんにちは、こんわかめです</p>
+<a href="https://www.youtube.com/c/%E3%81%93%E3%82%93%E3%82%8F%E3%81%8B%E3%82%81">チャンネル</a>    <h2 style="text-align:center">こんわかめ</h2>
+<a href="https://conwakame.github.io/diary.io/">日記</a>    <center><img src="チャンネルアイコン.gif" alt="こんわかめの部屋のチャンネルアイコンです"></center>
+<a href="https://conwakame.github.io/warehouse.io/">倉庫</a>    <p style="text-align:center">こんにちは、こんわかめです</p>
     <p style="text-align:center">ここはこんわかめという底辺Youtuberのお部屋です</p>
     <p style="text-align:center">要らなくなったプログラムや没になった動画、台本などを上げて行くつもりです</p>
 </section>    
